--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description-file =
     README.md
 author = Shay Arbov
 author-email = shay.arbov@stratoscale.com
-home-page = http://github.com/stratoscale/image-collector.git
+home-page = http://github.com/stratoscale/dim.git
 classifier =
     Environment :: Consol
     Intended Audience :: Information Technology
