--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ author = Shay Arbov
 author-email = shay.arbov@stratoscale.com
 home-page = http://github.com/stratoscale/dim.git
 classifier =
-    Environment :: Consol
+    Environment :: Console
     Intended Audience :: Information Technology
     Intended Audience :: System Administrators
     Operating System :: POSIX :: Linux
